Add Enemy attack

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ Content/ThirdPerson
 Content/Megascans
 Content/Effects
 Content/Weapon_Pack
+Content/Textures
+Content/Audio
+Content/ParagonMinions
 
 .vscode
 .vs
